--- a/final/firebase/functions/views/index.hbs
+++ b/final/firebase/functions/views/index.hbs
@@ -5,6 +5,9 @@
     <title>Assistant control board</title>
     <link rel="stylesheet" href="styles.css">
   <!--  <script src="/socket.io/socket.io.js"></script> -->
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
+
 </head>
 <body>
 <!-- Header -->
